=== ALPHA 3.3 ===

Fixes:
 * the spares container now responds correctly to the distance settings;
 * changed the default max distance to 2m to allow interaction with parts up to 3.75m;
 * tank leaks now ignore empty resources.
 
Improvements:
 * the temperature now makes parts age even when they are not in use;
 * the TemperatureMultiplier is now included in the computation of Lambda for all parts;
 * unmanned command pods don't get spare parts. Supports up to 7 crew members.
 * the atmospheric density is now used as LambdaMultiplier for control surfaces: this means they are less likely to fail at high altitudes.

=== ALPHA 3.2.1 ===

Hotfix to patch the issue causing multiple instances of the app button to be created.
Added the download URL to the .version file.


=== ALPHA 3.2 ===

Heavy code changes to have the runtime implemented as a ScenarioModule which also holds settings.
Now using the stock messaging system for inspections and failures.
Added an app button that opens a settings window. These settings can be edited in the space centre and are reloaded at the beginning of the flight.

There is now no difference between debug and release builds.


=== ALPHA 3.1 ===

Partial FAR compatibility.
Fixed (?) the issue with RAPIER engines.
Exponential decay of the recovery value of a part.


=== ALPHA 3 ===

Big Stuff:
 - EVA Inspection: you can now inspect a part while on EVA to have a ballpark estimate of its reliability (currently hideous, will embellish asap);
 - Inpsection bonus: additionally, performing an inspection will give a temporary reliability boost to the part;
 - Preemptive maintenance: you can now permanently improve the reliability (by consuming spare parts);
 - The higher a part's temperature, the faster it will age: be careful with those reentry angles!

Small stuff:
 - Now all the reliability infos are in their own panel in the editor;
 - Added support for engines that use ModuleEngineFX: now all engines should be covered, at least in theory;
